# batrag

./: .gitignore  LICENSE  README.md  pyproject.toml
batrag/: __main__.py  _indexer.py  _slicer.py  _sqlite3.py
